# server/protocol/gopher.pb.go
@@ -24,6 +24,61 @@ var _ = math.Inf
 // proto package needs to be updated.
 const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 
+type GopherInfo struct {
+	Name                 string   `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
+	X                    int32    `protobuf:"varint,2,opt,name=x,proto3" json:"x,omitempty"`
+	Y                    int32    `protobuf:"varint,3,opt,name=y,proto3" json:"y,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *GopherInfo) Reset()         { *m = GopherInfo{} }
+func (m *GopherInfo) String() string { return proto.CompactTextString(m) }
+func (*GopherInfo) ProtoMessage()    {}
+func (*GopherInfo) Descriptor() ([]byte, []int) {
+	return fileDescriptor_df81d38ec75a57c2, []int{0}
+}
+
+func (m *GopherInfo) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_GopherInfo.Unmarshal(m, b)
+}
+func (m *GopherInfo) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_GopherInfo.Marshal(b, m, deterministic)
+}
+func (m *GopherInfo) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_GopherInfo.Merge(m, src)
+}
+func (m *GopherInfo) XXX_Size() int {
+	return xxx_messageInfo_GopherInfo.Size(m)
+}
+func (m *GopherInfo) XXX_DiscardUnknown() {
+	xxx_messageInfo_GopherInfo.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_GopherInfo proto.InternalMessageInfo
+
+func (m *GopherInfo) GetName() string {
+	if m != nil {
+		return m.Name
+	}
+	return ""
+}
+
+func (m *GopherInfo) GetX() int32 {
+	if m != nil {
+		return m.X
+	}
+	return 0
+}
+
+func (m *GopherInfo) GetY() int32 {
+	if m != nil {
+		return m.Y
+	}
+	return 0
+}
+
 type LoginRequest struct {
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
@@ -34,7 +89,7 @@ func (m *LoginRequest) Reset()         { *m = LoginRequest{} }
 func (m *LoginRequest) String() string { return proto.CompactTextString(m) }
 func (*LoginRequest) ProtoMessage()    {}
 func (*LoginRequest) Descriptor() ([]byte, []int) {
-	return fileDescriptor_df81d38ec75a57c2, []int{0}
+	return fileDescriptor_df81d38ec75a57c2, []int{1}
 }
 
 func (m *LoginRequest) XXX_Unmarshal(b []byte) error {
@@ -68,7 +123,7 @@ func (m *Login) Reset()         { *m = Login{} }
 func (m *Login) String() string { return proto.CompactTextString(m) }
 func (*Login) ProtoMessage()    {}
 func (*Login) Descriptor() ([]byte, []int) {
-	return fileDescriptor_df81d38ec75a57c2, []int{1}
+	return fileDescriptor_df81d38ec75a57c2, []int{2}
 }
 
 func (m *Login) XXX_Unmarshal(b []byte) error {
@@ -121,7 +176,7 @@ func (m *Logout) Reset()         { *m = Logout{} }
 func (m *Logout) String() string { return proto.CompactTextString(m) }
 func (*Logout) ProtoMessage()    {}
 func (*Logout) Descriptor() ([]byte, []int) {
-	return fileDescriptor_df81d38ec75a57c2, []int{2}
+	return fileDescriptor_df81d38ec75a57c2, []int{3}
 }
 
 func (m *Logout) XXX_Unmarshal(b []byte) error {
@@ -159,7 +214,7 @@ func (m *LogoutResponse) Reset()         { *m = LogoutResponse{} }
 func (m *LogoutResponse) String() string { return proto.CompactTextString(m) }
 func (*LogoutResponse) ProtoMessage()    {}
 func (*LogoutResponse) Descriptor() ([]byte, []int) {
-	return fileDescriptor_df81d38ec75a57c2, []int{3}
+	return fileDescriptor_df81d38ec75a57c2, []int{4}
 }
 
 func (m *LogoutResponse) XXX_Unmarshal(b []byte) error {
@@ -195,7 +250,7 @@ func (m *Movement) Reset()         { *m = Movement{} }
 func (m *Movement) String() string { return proto.CompactTextString(m) }
 func (*Movement) ProtoMessage()    {}
 func (*Movement) Descriptor() ([]byte, []int) {
-	return fileDescriptor_df81d38ec75a57c2, []int{4}
+	return fileDescriptor_df81d38ec75a57c2, []int{5}
 }
 
 func (m *Movement) XXX_Unmarshal(b []byte) error {
@@ -229,7 +284,7 @@ type Movement_Logout struct {
 }
 
 type Movement_Info struct {
-	Info *Movement_GopherInfo `protobuf:"bytes,3,opt,name=info,proto3,oneof"`
+	Info *GopherInfo `protobuf:"bytes,3,opt,name=info,proto3,oneof"`
 }
 
 func (*Movement_Login) isMovement_Event() {}
@@ -259,7 +314,7 @@ func (m *Movement) GetLogout() *Logout {
 	return nil
 }
 
-func (m *Movement) GetInfo() *Movement_GopherInfo {
+func (m *Movement) GetInfo() *GopherInfo {
 	if x, ok := m.GetEvent().(*Movement_Info); ok {
 		return x.Info
 	}
@@ -275,93 +330,38 @@ func (*Movement) XXX_OneofWrappers() []interface{} {
 	}
 }
 
-type Movement_GopherInfo struct {
-	Name                 string   `protobuf:"bytes,1,opt,name=name,proto3" json:"name,omitempty"`
-	X                    int32    `protobuf:"varint,2,opt,name=x,proto3" json:"x,omitempty"`
-	Y                    int32    `protobuf:"varint,3,opt,name=y,proto3" json:"y,omitempty"`
-	XXX_NoUnkeyedLiteral struct{} `json:"-"`
-	XXX_unrecognized     []byte   `json:"-"`
-	XXX_sizecache        int32    `json:"-"`
-}
-
-func (m *Movement_GopherInfo) Reset()         { *m = Movement_GopherInfo{} }
-func (m *Movement_GopherInfo) String() string { return proto.CompactTextString(m) }
-func (*Movement_GopherInfo) ProtoMessage()    {}
-func (*Movement_GopherInfo) Descriptor() ([]byte, []int) {
-	return fileDescriptor_df81d38ec75a57c2, []int{4, 0}
-}
-
-func (m *Movement_GopherInfo) XXX_Unmarshal(b []byte) error {
-	return xxx_messageInfo_Movement_GopherInfo.Unmarshal(m, b)
-}
-func (m *Movement_GopherInfo) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
-	return xxx_messageInfo_Movement_GopherInfo.Marshal(b, m, deterministic)
-}
-func (m *Movement_GopherInfo) XXX_Merge(src proto.Message) {
-	xxx_messageInfo_Movement_GopherInfo.Merge(m, src)
-}
-func (m *Movement_GopherInfo) XXX_Size() int {
-	return xxx_messageInfo_Movement_GopherInfo.Size(m)
-}
-func (m *Movement_GopherInfo) XXX_DiscardUnknown() {
-	xxx_messageInfo_Movement_GopherInfo.DiscardUnknown(m)
-}
-
-var xxx_messageInfo_Movement_GopherInfo proto.InternalMessageInfo
-
-func (m *Movement_GopherInfo) GetName() string {
-	if m != nil {
-		return m.Name
-	}
-	return ""
-}
-
-func (m *Movement_GopherInfo) GetX() int32 {
-	if m != nil {
-		return m.X
-	}
-	return 0
-}
-
-func (m *Movement_GopherInfo) GetY() int32 {
-	if m != nil {
-		return m.Y
-	}
-	return 0
-}
-
 func init() {
+	proto.RegisterType((*GopherInfo)(nil), "protocol.GopherInfo")
 	proto.RegisterType((*LoginRequest)(nil), "protocol.LoginRequest")
 	proto.RegisterType((*Login)(nil), "protocol.Login")
 	proto.RegisterType((*Logout)(nil), "protocol.Logout")
 	proto.RegisterType((*LogoutResponse)(nil), "protocol.LogoutResponse")
 	proto.RegisterType((*Movement)(nil), "protocol.Movement")
-	proto.RegisterType((*Movement_GopherInfo)(nil), "protocol.Movement.GopherInfo")
 }
 
 func init() { proto.RegisterFile("gopher.proto", fileDescriptor_df81d38ec75a57c2) }
 
 var fileDescriptor_df81d38ec75a57c2 = []byte{
-	// 301 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x50, 0x41, 0x4f, 0xf2, 0x40,
-	0x10, 0xdd, 0xfd, 0x3e, 0x8a, 0x38, 0x20, 0x92, 0x39, 0x98, 0xa6, 0xd1, 0x84, 0xec, 0x45, 0xe2,
-	0xa1, 0x31, 0xc5, 0xe8, 0xc5, 0x93, 0x17, 0x31, 0xc1, 0xcb, 0xfa, 0x0b, 0x94, 0x0c, 0x48, 0x42,
-	0x77, 0x6a, 0xbb, 0x6d, 0xe0, 0x67, 0xf9, 0x7b, 0xfc, 0x33, 0x86, 0x6d, 0x2b, 0xb1, 0x70, 0xf1,
-	0xb4, 0x3b, 0xf3, 0xde, 0xcc, 0xbc, 0xf7, 0xa0, 0xb7, 0xe0, 0xe4, 0x9d, 0xd2, 0x30, 0x49, 0xd9,
-	0x32, 0x76, 0xdc, 0x33, 0xe3, 0x95, 0xea, 0x43, 0x6f, 0xca, 0x8b, 0xa5, 0xd1, 0xf4, 0x91, 0x53,
-	0x66, 0xd5, 0x1d, 0x78, 0xae, 0x46, 0x84, 0x96, 0x79, 0x8d, 0xc9, 0x97, 0x43, 0x39, 0x3a, 0xd6,
-	0xee, 0x8f, 0x3d, 0x90, 0x6b, 0xff, 0xdf, 0x50, 0x8e, 0x3c, 0x2d, 0xd7, 0xdb, 0x6a, 0xe3, 0xff,
-	0x2f, 0xab, 0x8d, 0x3a, 0x87, 0xf6, 0x94, 0x17, 0x9c, 0xdb, 0x43, 0x93, 0x6a, 0x00, 0xfd, 0x12,
-	0xd5, 0x94, 0x25, 0x6c, 0x32, 0x52, 0x5f, 0x12, 0x3a, 0xcf, 0x5c, 0x50, 0x4c, 0xc6, 0xe2, 0x25,
-	0x78, 0xab, 0xed, 0x55, 0x37, 0xd3, 0x8d, 0x4e, 0xc3, 0x5a, 0x5f, 0xe8, 0xc4, 0x4c, 0x84, 0x2e,
-	0x71, 0xbc, 0x82, 0xf6, 0xca, 0xed, 0x71, 0x32, 0xba, 0xd1, 0xe0, 0x17, 0x93, 0x73, 0x3b, 0x11,
-	0xba, 0x62, 0xe0, 0x18, 0x5a, 0x4b, 0x33, 0x67, 0x27, 0xb1, 0x1b, 0x5d, 0xec, 0x98, 0xf5, 0xd9,
-	0xf0, 0xd1, 0x65, 0xf2, 0x64, 0xe6, 0x3c, 0x11, 0xda, 0x91, 0x83, 0x7b, 0x80, 0x5d, 0xf7, 0xaf,
-	0x21, 0x3c, 0x1c, 0x81, 0x47, 0x05, 0x19, 0x1b, 0x7d, 0x4a, 0x38, 0x29, 0xf7, 0xbc, 0x50, 0x5a,
-	0x2c, 0x67, 0x84, 0x51, 0x65, 0x11, 0xcf, 0x1a, 0xe6, 0xaa, 0xe4, 0x83, 0xa6, 0x69, 0x25, 0xf0,
-	0xb6, 0x76, 0x8b, 0x7b, 0x3e, 0x03, 0xbf, 0xd9, 0xf9, 0x49, 0x56, 0xe0, 0x0d, 0xb4, 0x62, 0x2e,
-	0x08, 0x71, 0xdf, 0x73, 0x70, 0xa0, 0xa7, 0xc4, 0x48, 0x5e, 0xcb, 0xb7, 0xb6, 0x03, 0xc6, 0xdf,
-	0x01, 0x00, 0x00, 0xff, 0xff, 0x42, 0xea, 0xc6, 0x2c, 0x2b, 0x02, 0x00, 0x00,
+	// 297 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x90, 0xc1, 0x4e, 0xc2, 0x40,
+	0x10, 0x86, 0x77, 0x95, 0x22, 0x0e, 0x88, 0x64, 0x62, 0x4c, 0x43, 0x3c, 0x90, 0xbd, 0x48, 0x38,
+	0x10, 0x53, 0x8d, 0x5e, 0x3c, 0x79, 0x11, 0x13, 0xbc, 0xac, 0x4f, 0xa0, 0x64, 0x40, 0x92, 0x76,
+	0xa7, 0xb6, 0xdb, 0x06, 0xde, 0xc3, 0x17, 0xf1, 0x0d, 0x0d, 0xdb, 0xd6, 0xc6, 0xca, 0xc5, 0xd3,
+	0xee, 0xcc, 0xff, 0xcf, 0xec, 0xb7, 0x3f, 0xf4, 0x56, 0x1c, 0xbf, 0x53, 0x32, 0x8d, 0x13, 0xb6,
+	0x8c, 0x1d, 0x77, 0x2c, 0x38, 0x54, 0xf7, 0x00, 0x8f, 0x4e, 0x79, 0x32, 0x4b, 0x46, 0x84, 0x96,
+	0x79, 0x8d, 0xc8, 0x97, 0x23, 0x39, 0x3e, 0xd6, 0xee, 0x8e, 0x3d, 0x90, 0x1b, 0xff, 0x60, 0x24,
+	0xc7, 0x9e, 0x96, 0x9b, 0x5d, 0xb5, 0xf5, 0x0f, 0x8b, 0x6a, 0xab, 0xfa, 0xd0, 0x9b, 0xf3, 0x6a,
+	0x6d, 0x34, 0x7d, 0x64, 0x94, 0x5a, 0x75, 0x07, 0x9e, 0xab, 0xff, 0xbd, 0xe8, 0x02, 0xda, 0x73,
+	0x5e, 0x71, 0x66, 0xf7, 0x4d, 0xaa, 0x01, 0xf4, 0x0b, 0x55, 0x53, 0x1a, 0xb3, 0x49, 0x49, 0x7d,
+	0x4a, 0xe8, 0x3c, 0x73, 0x4e, 0x11, 0x19, 0x8b, 0x97, 0xe0, 0x85, 0xbb, 0x57, 0xdd, 0x4c, 0x37,
+	0x38, 0x9d, 0x56, 0xbf, 0x9b, 0x3a, 0x98, 0x99, 0xd0, 0x85, 0x8e, 0x13, 0x68, 0x87, 0x6e, 0x8f,
+	0xc3, 0xe8, 0x06, 0x83, 0x5f, 0x4e, 0xce, 0xec, 0x4c, 0xe8, 0xd2, 0x81, 0x13, 0x68, 0xad, 0xcd,
+	0x92, 0x1d, 0x62, 0x37, 0x38, 0xab, 0x9d, 0x75, 0x5c, 0x33, 0xa1, 0x9d, 0xe7, 0xe1, 0x08, 0x3c,
+	0xca, 0xc9, 0xd8, 0xe0, 0x4b, 0xc2, 0x49, 0xa1, 0xbf, 0x50, 0x92, 0xaf, 0x17, 0x84, 0x41, 0xc9,
+	0x86, 0xe7, 0x0d, 0xaa, 0x32, 0xb2, 0x61, 0x93, 0x56, 0x09, 0xbc, 0xad, 0x30, 0xf1, 0x0f, 0xe0,
+	0xd0, 0x6f, 0x76, 0x7e, 0x22, 0x11, 0x78, 0x03, 0xad, 0x88, 0x73, 0x42, 0xac, 0x3d, 0x55, 0x46,
+	0xc3, 0x3d, 0x3d, 0x25, 0xc6, 0xf2, 0x4a, 0xbe, 0xb5, 0x9d, 0x70, 0xfd, 0x1d, 0x00, 0x00, 0xff,
+	0xff, 0x78, 0xed, 0xa1, 0x4d, 0x22, 0x02, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
